v1.9.0: jet info + jet fmt — inspect and tidy
Two complementary additions round out the dep + dev-experience
story. `jet info <coord>` shows Maven Central metadata at a glance
without adding the dep: display name, description, project URL,
license(s), SCM url + connection, and direct dependency list with
scope tags and `${prop}` interpolation. Accepts `group:artifact`
(auto-resolves to the latest stable via the v1.5 registry helper,
prereleases filtered) or `group:artifact:version`. Output ends
with the exact `jet add` command for the resolved version, so
the search → info → add workflow is one paste away.

The POM parser is a separate quick-xml state machine in
`cmd/info.rs` rather than an extension to `resolver/pom.rs` —
the resolver only cares about coordinates / parent / properties /
dependency-management / scope, and bloating it with display-only
fields (name, description, licenses, scm) would clutter the
build-time path with no benefit. Property interpolation is
local-only (no parent chain) and inherited versions display as
"(inherited)" so the user can tell the difference at a glance.

`jet fmt [--check]` wraps google-java-format. On first use jet
downloads the all-deps JAR (pinned to v1.35.0, the latest as of
shipping) into `~/.jet/tools/google-java-format-<ver>-all-deps.jar`
— atomic rename via `.jar.tmp`, ZIP-magic sanity check before
commit. Subsequent invocations are zero-cost. The runner walks
`src/main/java` and `src/test/java` for `.java` files, then
invokes `java --add-exports=jdk.compiler/...=ALL-UNNAMED -jar
<gjf> --replace <files...>`. The six `--add-exports` lines are
GJF's documented JDK 16+ requirement (verified working on JDK
25). `--check` swaps `--replace` for `--dry-run --set-exit-if-
changed` and turns the GJF non-zero exit into a clean jet error
suitable for CI pre-commit gates.

New top-level `src/tools.rs` module hosts on-demand external-tool
binaries; future homes: Checkstyle, JMH runner, SpotBugs.

Smoke tested:
- `jet info com.google